// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button custom style 1`] = `
.c0 {
  height: 36px;
  outline: none;
  padding: 0 20px;
  border-radius: 4px;
}

.c0.primary {
  background-color: #1585d8;
}

.c0.primary span {
  color: white;
}

.c0.secondary {
  background-color: #eff3f6;
}

.c0.secondary span {
  color: grey;
}

<button
  className="primary c0"
  onClick={[Function]}
  style={
    Object {
      "background": "orange",
      "border": "2px solid crimson",
    }
  }
>
  <span>
    Custom style
  </span>
</button>
`;

exports[`Storyshots Button playground 1`] = `
.c0 {
  height: 46px;
  outline: none;
  padding: 0 20px;
  border-radius: 4px;
}

.c0.primary {
  background-color: #1585d8;
}

.c0.primary span {
  color: white;
}

.c0.secondary {
  background-color: #eff3f6;
}

.c0.secondary span {
  color: grey;
}

<button
  className="primary c0"
  onClick={[Function]}
  style={Object {}}
>
  <span>
    Hello Button
  </span>
</button>
`;

exports[`Storyshots Title light theme 1`] = `
.c0 {
  font-family: 'Karla',sans-serif;
  padding: 2em;
  font-size: 2em;
  text-align: center;
  color: #e22a23;
  margin: 0;
}

<h1
  className="c0"
>
  JavaScript Design Patterns
</h1>
`;
